--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documen 123563</title>
+  <title>Documen 1235634</title>
 </head>
 <body>
-  
+  <div id="game"></div>
 </body>
 </html>
